--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,9 +1,15 @@
 <h1>Edit <%= @cat.name %></h1>
+<% if flash[:my_errors] %>
+    <h2>Errors</h2>
+    <% flash[:my_errors].each do |error| %>
+    <p><%= error %></p>
+    <% end %>
+<% end %>
 <%= form_for @cat do |f| %>
 <%= f.label :name%>
 <%= f.text_field :name %> 
 <%= f.label :breed%>
-<%= f.text_field :breed %>
+<%= f.collection_select :breed, @cats, :breed, :breed %>
 <%= f.label :age%>
 <%= f.number_field :age %>
 <%= f.label :img_url%>
