--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,4 +1,10 @@
 <h1>New Cat</h1>
+<% if flash[:my_errors] %>
+    <h2>Errors</h2>
+    <% flash[:my_errors].each do |error| %>
+    <p><%= error %></p>
+    <% end %>
+<% end %>
 <%= form_for @cat do |f| %>
 <%= f.label :name%>
 <%= f.text_field :name %> 
