--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,18 +1,2 @@
 <h1>New Cat</h1>
-<% if flash[:my_errors] %>
-    <h2>Errors</h2>
-    <% flash[:my_errors].each do |error| %>
-    <p><%= error %></p>
-    <% end %>
-<% end %>
-<%= form_for @cat do |f| %>
-<%= f.label :name%>
-<%= f.text_field :name %> 
-<%= f.label :breed%>
-<%= f.text_field :breed %>
-<%= f.label :age%>
-<%= f.number_field :age %>
-<%= f.label :img_url%>
-<%= f.text_field :img_url %>
-<%= f.submit%>
-<% end %>
+<%= render 'form' %>
